--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
 
         <div >
-            <img src="imagens/images.jpg" alt="" class="Descricao__imagem">
+            <img src="imagens/mulher.svg" alt="" class="Descricao__imagem">
         </div>
     </div>
 
